kuber-homeworks/3.3/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: http-backend
      port: 80
