kuber-homeworks/3.3/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: http-cache
      port: 80
