kuber-homeworks/3.3/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - name: http-frontend
      port: 80
