kuber-homeworks/3.3/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-all
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Ingress
